--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,16 @@ authors = [
 dependencies = [
     "pyyaml>=6.0",
     "types-PyYAML>=6.0.12.20250915",
+    "jinja2>=3.1.6",
 ]
 requires-python = ">=3.10"
 license = {text = "Apache2.0"}
 
 [project.scripts]
-lpitCollector = "lpitPublisher.collector:cli"
-lpitGenerator = "lpitPublisher.generator:cli"
+lpitCollector     = "lpitPublisher.collector:cli"
+lpitGenerator     = "lpitPublisher.generator:cli"
+lpitDocumentInit  = "lpitPublisher.documentInit:cli"
+lpitStylesUpdater = "lpitPublisher.stylesUpdater:cli"
 
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
