--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "pyyaml>=6.0",
     "types-PyYAML>=6.0.12.20250915",
     "jinja2>=3.1.6",
+    "markdown>=3.10",
+    "types-Markdown>=3.10.0.20251106",
 ]
 requires-python = ">=3.10"
 license = {text = "Apache2.0"}
