--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "markdown>=3.10",
     "types-Markdown>=3.10.0.20251106",
     "lpitConfig @ git+https://github.com/litProgTypst/common-config.git",
+    "pybtex>=0.25.1",
 ]
 requires-python = ">=3.10"
 license = {text = "Apache2.0"}
