--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ lpitCollector     = "lpitPublisher.collector:cli"
 lpitGenerator     = "lpitPublisher.generator:cli"
 lpitDocumentInit  = "lpitPublisher.documentInit:cli"
 lpitStylesUpdater = "lpitPublisher.stylesUpdater:cli"
+lpitDeploy        = "lpitPublisher.deployer:cli"
 
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
